[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "arvak"
version = "1.6.0"
description = "Arvak - Rust-native quantum compilation and orchestration platform for HPC with CUDA-Q, neutral-atom, and dynamic plugin support. Developed by The HAL Contract."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Daniel Hinderink", email = "daniel@hal-contract.org" }
]
keywords = ["quantum", "compiler", "qasm", "circuit", "hpc", "orchestration", "cuda-q", "neutral-atom"]
urls = { Homepage = "https://arvak.io", Repository = "https://github.com/hiq-lab/arvak", Issues = "https://github.com/hiq-lab/arvak/issues", Documentation = "https://arvak.io", Funding = "https://www.hal-contract.org" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
# Framework integrations (optional)
qiskit = ["qiskit>=1.0.0", "qiskit-aer>=0.13.0", "qiskit-qasm3-import>=0.5.0"]
qrisp = ["qrisp>=0.4.0"]
cirq = ["cirq>=1.0.0", "cirq-core>=1.0.0", "ply>=3.11"]
pennylane = ["pennylane>=0.32.0"]
chemistry = ["pyscf>=2.4.0", "pennylane>=0.32.0"]
# Nathan research optimizer
nathan = ["httpx>=0.27"]
# Notebook support
notebook = ["jupyter>=1.0.0", "matplotlib>=3.5.0"]
# All integrations
all = ["arvak[qiskit,qrisp,cirq,pennylane,chemistry,notebook,nathan]"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "arvak._native"
