[package]
name = "arvak-qdmi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "QDMI device interface for the Arvak quantum compilation platform"
license.workspace = true
repository.workspace = true

[dependencies]
libloading.workspace = true
tracing = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Enable building the mock device for testing
mock-device = []
