[package]
name = "arvak-sched"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HIQ HPC Scheduler with SLURM integration"
keywords = ["quantum", "hpc", "scheduler", "slurm", "workflow"]
categories = ["science", "asynchronous"]

[dependencies]
arvak-ir = { workspace = true }
arvak-hal = { workspace = true }
arvak-qasm3 = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process", "fs", "sync"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Graph algorithms (for workflow DAG)
petgraph = { workspace = true }

# Error handling
thiserror = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Time
chrono = { workspace = true }

# Hashing
rustc-hash = { workspace = true }

# Logging
tracing = { workspace = true }

# SQLite for persistence
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
